# 21f-srch-ngn-linked-list-unary-tree

./: .gitignore  AVLTree.h  CMakeLists.txt  DocumentNode.cpp  DocumentNode.h  DocumentProcessor.cpp  DocumentProcessor.h  HashFunction.h  HashMap.h  HashNode.h  Index.cpp  Index.h  QueryProcessor.cpp  QueryProcessor.h  README.md  SearchEngine.cpp  SearchEngine.h  TreeNode.h  UserInterface.cpp  UserInterface.h  WordNode.cpp  WordNode.h  main.cpp  myDocument.h  test.cpp  tokStr.cpp  tokStr.h
ASCII Creations/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
documentation/html/: AVLTree_8h_source.html  DocumentNode_8h_source.html  DocumentProcessor_8h_source.html  HashFunction_8h_source.html  HashMap_8h_source.html  HashNode_8h_source.html  Index_8h_source.html  QueryProcessor_8h_source.html  TreeNode_8h_source.html  UserInterface_8h_source.html  WordNode_8h_source.html  annotated.html  catch_8hpp_source.html  catch__setup_8h_source.html  classAVLTree-members.html  classAVLTree.html  classCatch_1_1AssertionHandler-members.html  classCatch_1_1AssertionHandler.html  classCatch_1_1BinaryExpr-members.html  classCatch_1_1BinaryExpr.html  classCatch_1_1Capturer-members.html  classCatch_1_1Capturer.html  classCatch_1_1Detail_1_1Approx-members.html  classCatch_1_1Detail_1_1Approx.html  classCatch_1_1Detail_1_1IsStreamInsertable-members.html  classCatch_1_1Detail_1_1IsStreamInsertable.html  classCatch_1_1ExceptionTranslatorRegistrar-members.html  classCatch_1_1ExceptionTranslatorRegistrar.html  (+353 more)
rapidjson/: document.h
storage/: New Python File.py  stopWords.txt  stopWords2.txt
(+144 files in other folders)
